--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Listing Articles</h1>
-<%= link_to 'New Article', new_article_path %>
+<%= link_to 'New Article', new_article_path %><br>
 <table>
   <tr>
     <th>Title</th>
