--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,10 @@
 <h1>Listing Articles</h1>
 <%= link_to 'New Article', new_article_path %><br>
+<style>
+table, th, td {
+  border: 1px solid black;
+}
+</style>
 <table><br>
   <tr>
     <th>Title</th>
