--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -9,7 +9,7 @@ table, th, td {
   <tr>
     <th>Title</th>
     <th>Text</th>
-    <th></th>
+    <th colspan="3">Action</th>
   </tr>
  
   <% @articles.each do |article| %>
