--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Listing Articles</h1>
+<h1><u>Listing Articles</u></h1>
 <%= link_to 'New Article', new_article_path %><br>
 <style>
 table, th, td {
