--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,7 +5,12 @@ table, th, td {
   border: 1px solid black;
 }
 </style>
-<body background="htmlapp.jpg">
+<style>
+body {
+  background-image: url("htmlapp.jpg ");
+} 
+
+</style>
 <table><br>
   <tr>
     <th>Title</th>
