--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -16,7 +16,12 @@
       </ul>
     </div>
   <% end %>
- 
+  <style>
+  body {
+    background-color: #cccccc;
+  } 
+
+  </style>
   <p>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
