--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -12,6 +12,12 @@
      </ul>
    </div>
  <% end %>
+ <style>
+ body {
+   background-color: #cccccc;
+ } 
+
+ </style>
   <p>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
